Horizontal scroll fix #31

--- a/themes/default.scss
+++ b/themes/default.scss
@@ -206,7 +206,7 @@
   border: 1px solid #e8e8e8;
   margin-top: -1px;
   max-height: 160px;
-  overflow: scroll;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   z-index: 100;
   background: #ffffff;
